--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -16,7 +16,8 @@ h3,
 h4,
 h5,
 blockquote,
-a {
+a,
+button {
     font-family: $headingFont;
     font-weight: normal;
     color: $black;
